<resources>
  <string name="app_name">MM Keyboard</string>
  <string name="app_full_name">Meitei Mayek Keyboard</string>
  <string name="title_activity_main">MM Keyboard</string>
  <string name="title_about_me">About Me</string>
  <string name="title_open_source">Open Source</string>

  <string name="splash_welcome">Welcome to Meitei Mayek Keyboard!</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="sNav_home">Home</string>
  <string name="sNav_settings">Settings</string>
  <string name="sNav_share">Share</string>
  <string name="sNav_about">About</string>
  <string name="sNav_openSource">Open Source</string>
  <string name="sNav_aboutMe">About Me</string>

  <string name="devWithBy1">Developed with</string>
  <string name="love">Love</string>
  <string name="devWithBy2">by GyanendroKh</string>

  <string name="devBy">Developed by GyanendroKh</string>
  <string name="copyright">Copyright &#169; 2017&#8211;18 GyanendroKh</string>

  <string name="home_try_title">Try out the Keyboard here…</string>

  <string name="home_not_setup">The Keyboard is not properly setup.</string>
  <string name="click_here_to_setup">Click Here to SetUp</string>

  <string name="about">This is a simple keyboard for Meitei Mayek.\nThis project is an OpenSource Project developed just to teach others and to help in the development of our Meitei Culture on the way of Technology.</string>
  <string name="about_compat_body">This keyboard may not work on some older devices. Old version of Android (usually 4.4 and below) doesn\'t support the Meitei Mayek Font by default but most of the newer devices does except for some.\nBy \"not work\" I mean that Meitei Mayek Font may not be rendered when you type but it will still render it perfectly on the keyboard itself and this application.\nIf you have an older version device and the font doesn\'t render at all, you can install the NotoSansMeiteiMayek Font directly on your device.</string>
  <string name="about_developer">I (Gyanendro Kh) developed this app just for fun.\nIf any complaint or feedback, feel free to contact me.</string>

  <string name="version">v0.2.1</string>
  <string name="about_me_title">About Me</string>
  <string name="about_compat_title">Compatibility</string>
  <string name="about_dev_title">Developer</string>
  <string name="dev_con_fb">Facebook</string>
  <string name="dev_con_gmail">Gmail</string>
  <string name="dev_con_github">Github</string>

  <string name="open_source_text">This application is an OpenSource Application.\nThe Source Code for this application is hosted on Github. Anyone who wish to contribute can send a pull request. Let\'s develop this application together, help me make it better.</string>
  <string name="osLicenseTitle">License</string>
  <string name="os_license">Copyright 2017-2018 GyanendroKh\nLicensed under the Apache License,\nVersion 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
  <string name="link_to_github">Link to Github</string>

  <string name="placeholder">Lorem Ipsum</string>
  <string name="setup_state_skipped">Seems like you skipped the previous step.</string>
  <string name="setup_state_select_title">Select the Keyboard</string>
  <string name="setup_state_select_content">Select to keyboard by clicking the button below.\nA popup dialog box will appear, Click OK in it.</string>
  <string name="setup_state_select_btn_text">Click to Select</string>
  <string name="setup_state_default_title">Make it Default</string>
  <string name="setup_state_default_content">To start using the keyboard you need to set \"MM Keyboard\" as your default keyboard.\nClick the Button Below and Select MM Keyboard from the pop up list.</string>
  <string name="setup_state_default_btn_text">Click to make default</string>
  <string name="setup_state_ready_title">All Ready!!!</string>
  <string name="setup_state_ready_content">Keyboard is all set up.\nYou can now start typing in Meitei Mayek Script</string>
  <string name="setup_state_ready_btn_text">Start Typing</string>
</resources>
