<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/sNav_home"
      android:icon="@drawable/ic_home"
      android:title="@string/sNav_home"/>
    <item
      android:icon="@drawable/ic_settings"
        android:title="@string/sNav_settings"/>
    <item
      android:icon="@drawable/ic_menu_share"
      android:title="@string/sNav_share"/>
  </group>

  <item android:title="@string/sNav_about">
    <menu>
      <item
        android:id="@+id/sNav_openSource"
        android:icon="@drawable/ic_developer_mode"
        android:title="@string/sNav_openSource"/>
      <item
        android:id="@+id/sNav_aboutMe"
        android:icon="@drawable/ic_account_box"
        android:title="@string/sNav_aboutMe"/>
    </menu>
  </item>

</menu>
