<?xml version="1.0" encoding="utf-8" ?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/md_main_bg">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
      android:id="@+id/aboutCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/card_dimens"
      app:cardCornerRadius="@dimen/card_dimens"
      app:cardElevation="@dimen/card_dimens">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_rel_margin">

        <TextView
          android:id="@+id/about_me_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/about_me_title"
          android:textColor="@color/about_title"
          android:textSize="15sp"/>

        <TextView
          android:id="@+id/aboutText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/about_me_title"
          android:layout_centerHorizontal="true"
          android:text="@string/about"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/aboutText"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="10dp"
          android:gravity="center|center_horizontal"
          android:text="@string/version"/>

      </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/compatibilityCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/aboutCard"
      android:layout_margin="@dimen/card_dimens"
      app:cardCornerRadius="@dimen/card_dimens"
      app:cardElevation="@dimen/card_dimens">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_rel_margin">

        <TextView
          android:id="@+id/about_compat_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/about_compat_title"
          android:textColor="@color/about_title"
          android:textSize="15sp"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/about_compat_title"
          android:text="@string/about_compat_body"/>

      </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/compatibilityCard"
      android:layout_margin="@dimen/card_dimens"
      app:cardCornerRadius="@dimen/card_dimens"
      app:cardElevation="@dimen/card_dimens">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_rel_margin">

        <TextView
          android:id="@+id/about_developer_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/about_dev_title"
          android:textColor="@color/about_title"
          android:textSize="15sp"/>

        <TextView
          android:id="@+id/about_developer_body"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/about_developer_title"
          android:text="@string/about_developer"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/about_developer_body"
          android:layout_marginTop="10dp"
          android:gravity="center">

          <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/about_btn_margin"
            android:background="@drawable/about_dev_btn"
            android:text="@string/dev_con_fb"/>

          <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/about_btn_margin"
            android:background="@drawable/about_dev_btn"
            android:text="@string/dev_con_gmail"/>

          <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/about_btn_margin"
            android:background="@drawable/about_dev_btn"
            android:text="@string/dev_con_github"/>

        </LinearLayout>

      </RelativeLayout>

    </android.support.v7.widget.CardView>

  </RelativeLayout>

</ScrollView>
