<?xml version="1.0" encoding="utf-8" ?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/md_main_bg">
  
  <RelativeLayout  
    android:id="@+id/os_mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.v7.widget.CardView
      android:id="@+id/osGithubCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/card_dimens"
      app:cardCornerRadius="@dimen/card_dimens"
      app:cardElevation="@dimen/card_dimens">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_rel_margin">
      
        <TextView
          android:id="@+id/osGitText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/open_source_text"
          android:textSize="17sp"
          android:textColor="#000" />

        <android.support.v7.widget.AppCompatButton
          style="@style/Widget.AppCompat.Button"
          android:id="@+id/os_github_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:layout_below="@+id/osGitText"
          android:paddingEnd="10dp"
          android:paddingStart="10dp"
          android:background="@drawable/about_dev_btn"
          android:text="@string/link_to_github" />

      </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/osLicenseCard"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/card_dimens"
      android:layout_below="@+id/osGithubCard"
      app:cardCornerRadius="@dimen/card_dimens"
      app:cardElevation="@dimen/card_dimens">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_rel_margin">
      
        <TextView 
          android:id="@+id/osLicenseTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/osLicenseTitle"
          android:textColor="@color/about_title"
          android:textSize="15sp" />

        <TextView
          android:id="@+id/osLicenseText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/osLicenseTitle"
          android:text="@string/os_license"
          android:textSize="15sp"
          android:textColor="#000"
          android:gravity="center" />

      </RelativeLayout>

    </android.support.v7.widget.CardView>

  </RelativeLayout>
</ScrollView>
